
\name{NEWS}
\title{NEWS file for the basefun package}

\section{Changes in Version 1.0-6 (2019-10-05)}{
  \itemize{
    \item{Change name of parameter in \code{intercept\_basis} to 
          \code{(_Intercept_)}; this helps to detect 
          intercepts originating from other calls to \code{model.matrix}.}.
  }
}

\section{Changes in Version 1.0-5 (2019-06-20)}{
  \itemize{
    \item{Make sure \code{bounds[1]} is positive if \code{log_first = TRUE}.}
    \item{Correct behaviour outside support when \code{log_first = TRUE}.}
  }
}


\section{Changes in Version 1.0-4 (2019-02-25)}{
  \itemize{
    \item{\code{model.matrix} has \code{constrasts} attribute where appropriate.}
  }
}

\section{Changes in Version 1.0-3 (2019-01-16)}{
  \itemize{
    \item{Bernstein(log()) is possible with new \code{log_first} argument.}
    \item{Fix > length 1 issues.}
  }
}

\section{Changes in Version 1.0-2 (2018-09-17)}{
  \itemize{
    \item{Constrain Bernstein to zero second derivative at the support when
          linear extrapolation shall be used. This avoids ugly bumps in the
          corresponding densities in \pkg{mlt}.}
  }
}


\section{Changes in Version 1.0-1 (2018-03-27)}{
  \itemize{
    \item{Replace \code{rBind} by \code{rbind} as requested by MM.}
  }
}


\section{Changes in Version 1.0-0 (2018-03-07)}{
  \itemize{
    \item{A paper describing version 1.0-0 of the \pkg{mlt}, \pkg{basefun}, and
          \pkg{variables} packages was accepted for publication in the Journal of
          Statistical Software 2018-03-05.}
    \item{Documentation updates.}
  }
}


\section{Changes in Version 0.0-40 (2018-02-23)}{
  \itemize{
    \item{\code{nparm} sometimes generated data with sanitised variable
          names, we don't want this to happen.}
    \item{Allow positive increasing Bernstein polynomials.}
  }
}

\section{Changes in Version 0.0-39 (2017-12-18)}{
  \itemize{
    \item{Add \code{intercept_basis}, ie an intercept only model matrix.}
  }
}

