@@ -1,14 +1,13 @@
 
-citHeader("To cite basefun in publications use:")
+bibentry(bibtype = "Article",
+  title        = "Most Likely Transformations: The {mlt} Package",
+  author       = person(given = "Torsten", family = "Hothorn"),
+  journal      = "Journal of Statistical Software",
+  year         = "2020",
+  volume       = "92",
+  number       = "1",
+  pages        = "1--68",
+  doi          = "10.18637/jss.v092.i01",
 
-citEntry(entry="Article",
-         title = "Most Likely Transformations: The mlt Package",
-         author = personList(as.person("Torsten Hothorn")),
-         journal      = "Journal of Statistical Software",
-         year         = "2018",
-
-         textVersion =
-         paste("Torsten Hothorn (2018).",
-               "Most Likely Transformations: The mlt Package.",
-               "Journal of Statistical Software, forthcoming.")
+  header       = "To cite mlt/basefun/variables in publications use:"
 )
